Ahora se llama a un script en vez de a el sonar runner